fix gap home responsive

--- a/src/app/client/home/home/home.component.scss
+++ b/src/app/client/home/home/home.component.scss
@@ -105,6 +105,7 @@
 
 @media screen and (max-width: 400px) {
   .parent {
+    padding: 0px !important;
     .imagen1 {
       display: none;
       opacity: 0;
